--- a/website/index.html
+++ b/website/index.html
@@ -32,18 +32,18 @@
      <form id="form" class="space-y-4 text-gray-700  mb-3">
       <div class="flex flex-wrap">
         <div class="w-full">
-          <label class="block mb-1" for="formGridCode_zip">Enter your City Zip Code</label>
+          <label class="block mb-1" for="zip">Enter your City Zip Code</label>
           <input class="w-full h-10 px-3 text-base placeholder-gray-600 border rounded-lg focus:shadow-outline"
-            type="text" id="formGridCode_zip" />
+            type="text" id="zip" />
         </div>
       </div>
 
       <div class="flex flex-wrap">
         <div class="w-full">
-          <label class="block mb-1" for="formGridCode_feelings">What are you feeling today ?</label>
+          <label class="block mb-1" for="feelings">What are you feeling today ?</label>
           <textarea
             class="w-full h-16 px-3 py-2 text-base text-gray-700 placeholder-gray-600 border rounded-lg focus:shadow-outline"
-            id="formGridCode_feelings"></textarea>
+            id="feelings"></textarea>
         </div>
       </div>
       <button 
